# swissdamed2sqlite

./: .gitignore  CLAUDE.md  Cargo.toml  MIGEL_AUDIT_02.07.2026.md  README.md  build.rs  config.sample.toml  entitlements-appstore.plist  entitlements.plist  generate_migel_stats.py
.claude/skills/release/: SKILL.md
.github/workflows/: ci.yml  create-app.yml  export-credentials.yml  export-p8.yml  release.yml  update-appstore-metadata.yml
csv/: srn_unique.csv
src/: data.rs  diff.rs  download.rs  error_report.rs  export.rs  gdrive.rs  gui.rs  linkedin.rs  main.rs  migel.rs  migel_stats.rs  reports.rs  sigvaris_shop.rs  twitter.rs
tests/fixtures/: golden_set.tsv  migel.xlsx
windows/: AppxManifest.xml
winit-patched/src/platform_impl/macos/: ffi.rs  window_delegate.rs
