[package]
name = "swissdamed2sqlite"
version = "0.1.0"
edition = "2021"
description = "Download Swiss DAMED UDI data and convert to CSV or SQLite"

[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
csv = "1.3"
reqwest = { version = "0.12", features = ["blocking", "json", "cookies"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
